--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
-# assets
-misc
-unused
+/.pnp
+.pnp.js
 
 # testing
 /coverage
@@ -14,7 +13,6 @@ unused
 
 # misc
 .DS_Store
-.vscode
 .env.local
 .env.development.local
 .env.test.local
