--- a/package.json
+++ b/package.json
@@ -1,21 +1,55 @@
 {
-  "name": "mt4w-create-react-app",
+  "name": "camitrade",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://www.camitrade.com",
   "dependencies": {
-    "material-ui": "^0.20.0",
-    "polished": "^1.9.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^3.1.3",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "styled-components": "^2.4.0"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "node-sass": "^4.14.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-hook-form": "^5.7.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "reactstrap": "^8.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
+  },
+  "description": "This is a fully responsive business oriented website designed by w3 Layouts and built by me. This was built with SASS, JSX, React, React-Hooks, React-Router and hosted on github pages at .https://roberttk1.github.io/Captivate/",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/collie-moore/camitrade.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/collie-moore/camitrade/issues"
   }
 }
